Raised header z-index, no longer buried by images.

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -11,6 +11,7 @@ header {
   background-color: white;
   opacity: 1;
   padding: 5px 0;
+  z-index: 2;
 }
 
 .header-container,
